# tknn-data-shapley

./: README.md  pyproject.toml
tests/: test_all.py
topshap/: naive.py  shapley.py  topt.py
